javadoc feito e report dos testes